--- a/src/components/PokemonList.astro
+++ b/src/components/PokemonList.astro
@@ -1,5 +1,6 @@
 ---
 import axios from "axios";
+import Card from "./Card.astro";
 
 interface PokemonList {
   name: string;
@@ -32,31 +33,13 @@ const fetchPokemon = async () => {
 const pokemon = await fetchPokemon();
 ---
  
-        <h1>Pokemon API</h1>
-        <ul>
-        {
-            pokemon?.slice(0,10).map((pokemon) => (
-            
-                <img src={pokemon.image} alt={pokemon.name} />
-                <h1>{pokemon.name}</h1>
-            
-            ))
-        }
-        </ul>
-
-<style>
-    {
-     margin: 0;
-     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-       Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-       "Segoe UI Symbol";
-   }
-  
-   h1 {
-     color: #06f;
-   }
-  
-   h2 {
-     color: #f60;
-   }
-  </style>
+<div class="flex justify-center items-center min-h-screen bg-gray-100">
+  <div class="grid grid-cols-2 md:grid-cols-4 gap-4 p-4">
+    {pokemon?.slice(0,20).map((pokemon) => (
+      <div class="bg-white shadow rounded-lg p-4">
+        <img src={pokemon.image} alt={pokemon.name} class="mx-auto"/>
+        <h2 class="text-center text-xl font-bold">{pokemon.name}</h2>
+      </div>
+    ))}
+  </div>
+</div>
